ECL 10.1.1:
===========

* Bugs fixed:

 - DIRECTORY used stat() also on files that did not match the directory masks.

 - The syntax for matching strings in DIRECTORY is now the same as in
   PATHNAME-MATCH-P. Formerly there were small differences, the forming
   understanding characters #\? and #\\

 - Standalone executables do not require the existence of the ECLDIR directory
   to start up -- it may be required, though, for working Unicode because the
   encodings are stored there.

 - PROCESS-JOIN was exported from the wrong package.

 - PROCESS-JOIN would fail when called while a thread was being started.

 - The output values of a process or thread are now collected in the process
   object and returned by PROCESS-JOIN.

 - The interrupt servicing thread must explicitely include the interrupt signal
   among the ones it captures. Otherwise it will never be interrupted itself.

* Visible changes:

 - Significant speed up in access to hash tables of up to 30% by writing
   specialized loops for EQ, EQL, EQUAL, EQUALP and package hash tables.

 - New function EXT:ENVIRON returns the list of strings that makes up the
   process environment. This is the equivalent of POSIX (char **environ)
   and Windows' GetEnvironmentStrings.

 - EXT:RUN-PROGRAM now accepts a keyword argument, :ENVIRON, which is a
   list of strings configuring the environment of the child process.

 - EXT:RUN-PROGRAM returns as second value an EXT:EXTERNAL-PROCESS structure,
   which supports the queries EXT:EXTERNAL-PROCESS-{PID,INPUT,OUTPUT,STATUS},
   following CCL's conventions.

 - New function EXT:EXTERNAL-PROCESS-WAIT to wait indefinitely or simply query
   the status of a process.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***