@@ -238,7 +238,13 @@ AC_ARG_ENABLE(gengc,
   AS_HELP_STRING( [--enable-gengc],
 		  [use generational garbage collection. Requires Boehm-Weiser gc.]
 		  [(no|yes, default=NO)]),
-  [], [enable_gengc=no] )
+  [enable_gengc=${enableval}], [enable_gengc=no] )
+
+AC_ARG_ENABLE(precisegc,
+  AS_HELP_STRING( [--enable-precisegc],
+		  [use type information during garbage collection. Requires Boehm-Weiser gc.]
+		  [(no|yes, default=NO)]),
+  [enable_precisegc=${enableval}], [enable_precisegc=no] )
 
 dnl AC_ARG_ENABLE(debug,
 dnl   AS_HELP_STRING( [--enable-debug],
@@ -518,8 +524,15 @@ else
   fi
   EXTRA_OBJS="${EXTRA_OBJS} alloc_2.${OBJEXT}"
 fi
-if test "${enable_gengc}" = "yes" ; then
+if test "${enable_gengc}" != "no" ; then
   AC_DEFINE(GBC_BOEHM_GENGC)
+fi
+AC_MSG_CHECKING([if we use Boehm-Demers-Weiser precise garbage collector]);
+if test "${enable_precisegc}" != "no" ; then
+  AC_DEFINE(GBC_BOEHM_PRECISE)
+  AC_MSG_RESULT([yes])
+else
+  AC_MSG_RESULT([no])
 fi
 
 if test ${enable_smallcons} = "yes" ; then
